Update button labels in chat.html

--- a/chat.html
+++ b/chat.html
@@ -10,8 +10,8 @@
 
 <body style="background: url(wallpaperflare.com_wallpaper.jpg); background-size: cover; background-repeat: no-repeat;">
     <div>
-        <button id="vijupuju" class="user-select">VIJUPUJU</button>
-        <button id="bugapuga" class="user-select">BUGAPUGA</button>
+        <button id="vijupuju" class="user-select">VJ</button>
+        <button id="bugapuga" class="user-select">AKONSA</button>
     </div>
     <div id="chat-box">
         
@@ -27,4 +27,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
